Added src/sbt-test directory with one testproject in; Revert autoplugin using